lrParser.output
Terminals unused in grammar

    empty
    TExpressao
    TExp1
    TTLogico
    TTLogico1
    TFLogico
    TExpRel
    TExpRel2
    TExpA
    TExpA1
    TTermo
    TTermo1
    TFator
    TFator2
    TExpUnaria
    TExpBase
    TExpId
    TInstrucoes
    TInstrucoes2
    TInstrucao
    TInstrucaoDeclaracaoInicializacao
    TInstrucaoDeclaracaoInicializacao2
    TInstrucaoDeclaracaoInicializacao3
    TInstrucaoAtribuicaoCasting
    TInstrucaoChamadaId
    TChamadaFuncaoOuAtribuicao
    TLvalueId
    TOperadoresAtribuicao
    TListaIdentificadores
    TListaIdentificadores2
    TListaExpressoes
    TListaExpressoes2
    TInstrucaoCondicional
    TInstrucaoCondicional2
    TInstrucaoRepeticao
    TLacoPara
    TLacoParaConjunto
    TLacoEnquanto
    TInstrucaoSaida
    TInstrucaoIO
    TBloco
    TDefinicaoFuncao
    TListaParametrosFuncao
    TListaParametrosFuncao2
    TTipoFuncao
    TParametroFuncao
    TTipo
    TTipoPrimitivo
    TTipoNumerico
    TTipoEstruturado
    TPrograma
    TDef
    TDefinicaoRegistro
    TListaAtributos
    TListaAtributos2


State 30 conflicts: 2 shift/reduce


Grammar

    0 $accept: PROGRAM eof

    1 PROGRAM: DEF PROGRAM eof
    2        | %empty

    3 DEF: key_def DEFINICAO_FUNCAO
    4    | DEFINICAO_FUNCAO
    5    | DEFINICAO_REGISTRO
    6    | INSTRUCAO

    7 DEFINICAO_REGISTRO: key_deftipo key_register id chaves_esquerda LISTA_ATRIBUTOS chaves_direita

    8 LISTA_ATRIBUTOS: INSTRUCAO_DECLARACAO
    9                | INSTRUCAO_INICIALIZACAO
   10                | INSTRUCAO_DECLARACAO LISTA_ATRIBUTOS
   11                | INSTRUCAO_INICIALIZACAO LISTA_ATRIBUTOS

   12 DEFINICAO_FUNCAO: TIPO_FUNCAO parenteses_esquerda LISTA_PARAMETROS_FUNCAO parenteses_direita BLOCO

   13 LISTA_PARAMETROS_FUNCAO: PARAMETRO_FUNCAO
   14                        | PARAMETRO_FUNCAO virgula LISTA_PARAMETROS_FUNCAO
   15                        | %empty

   16 TIPO_FUNCAO: TIPO
   17            | key_return_nothing

   18 PARAMETRO_FUNCAO: TIPO id

   19 TIPO: TIPO_PRIMITIVO
   20     | TIPO_ESTRUTURADO

   21 TIPO_PRIMITIVO: TIPO_NUMERICO
   22               | key_caractere
   23               | key_string

   24 TIPO_NUMERICO: key_int
   25              | key_real
   26              | key_bool

   27 TIPO_ESTRUTURADO: key_set TIPO
   28                 | key_register id
   29                 | key_vetor TIPO colchetes_esquerda colchetes_direita

   30 BLOCO: chaves_esquerda INSTRUCOES chaves_direita

   31 INSTRUCOES: INSTRUCAO
   32           | INSTRUCAO INSTRUCOES

   33 INSTRUCAO: INSTRUCAO_DECLARACAO
   34          | INSTRUCAO_INICIALIZACAO
   35          | INSTRUCAO_ATRIBUICAO
   36          | INSTRUCAO_CONDICIONAL
   37          | INSTRUCAO_REPETICAO
   38          | INSTRUCAO_IO
   39          | INSTRUCAO_SAIDA
   40          | INSTRUCAO_CHAMADA_FUNCAO
   41          | BLOCO
   42          | EXP ponto_virgula

   43 INSTRUCAO_DECLARACAO: TIPO LISTA_IDENTIFICADORES

   44 LISTA_IDENTIFICADORES: id
   45                      | id virgula LISTA_IDENTIFICADORES

   46 INSTRUCAO_INICIALIZACAO: TIPO id assign EXP ponto_virgula
   47                        | TIPO id assign chaves_esquerda LISTA_EXPRESSOES chaves_direita ponto_virgula

   48 INSTRUCAO_ATRIBUICAO: CLVALUE OPERADORES_ATRIBUICAO EXP ponto_virgula

   49 CLVALUE: CASTING LVALUE
   50        | LVALUE

   51 LVALUE: id
   52       | LVALUE colchetes_esquerda EXP colchetes_direita
   53       | LVALUE ponto id

   54 CASTING: parenteses_esquerda TIPO_PRIMITIVO parenteses_direita

   55 INSTRUCAO_CHAMADA_FUNCAO: id parenteses_esquerda LISTA_EXPRESSOES parenteses_direita ponto_virgula

   56 LISTA_EXPRESSOES: EXP
   57                 | EXP virgula LISTA_EXPRESSOES
   58                 | %empty

   59 INSTRUCAO_CONDICIONAL: key_if parenteses_esquerda EXP parenteses_direita INSTRUCAO
   60                      | key_if parenteses_esquerda EXP parenteses_direita INSTRUCAO key_else INSTRUCAO

   61 INSTRUCAO_REPETICAO: LACO_PARA
   62                    | LACO_PARA_CONJUNTO
   63                    | LACO_ENQUANTO

   64 LACO_PARA: key_for parenteses_esquerda INSTRUCAO_INICIALIZACAO
   65          | INSTRUCAO_ATRIBUICAO ponto_virgula EXP ponto_virgula INSTRUCAO_ATRIBUICAO parenteses_direita chaves_esquerda INSTRUCAO chaves_direita

   66 LACO_PARA_CONJUNTO: key_for_set parenteses_esquerda id key_in EXP parenteses_direita INSTRUCAO

   67 LACO_ENQUANTO: key_while parenteses_esquerda EXP parenteses_direita INSTRUCAO

   68 INSTRUCAO_SAIDA: key_return EXP ponto_virgula
   69                | key_break ponto_virgula
   70                | key_continue ponto_virgula

   71 INSTRUCAO_IO: key_read parenteses_esquerda id parenteses_direita ponto_virgula
   72             | key_write parenteses_esquerda EXP parenteses_direita ponto_virgula

   73 OPERADORES_ATRIBUICAO: assign
   74                      | assign_sum
   75                      | assign_sub
   76                      | assign_mult
   77                      | assign_div
   78                      | assign_set_union
   79                      | assign_set_intersection

   80 EXP: id EXP_ID
   81    | inteiro
   82    | real
   83    | caractere
   84    | palavra
   85    | booleano
   86    | parenteses_esquerda EXP parenteses_direita
   87    | EXP op_or EXP
   88    | EXP op_and EXP
   89    | op_not EXP
   90    | op_sub EXP
   91    | op_sum EXP
   92    | EXP op_sub EXP
   93    | EXP op_sum EXP
   94    | EXP set_intersection EXP
   95    | EXP set_union EXP
   96    | EXP op_mult EXP
   97    | EXP op_div EXP
   98    | EXP op_mod EXP
   99    | EXP circunflexo EXP
  100    | EXP op_diff EXP
  101    | EXP op_equal EXP
  102    | EXP op_gte EXP
  103    | EXP op_lte EXP
  104    | EXP op_gt EXP
  105    | EXP op_lt EXP

  106 EXP_ID: %empty
  107       | ponto id
  108       | colchetes_esquerda EXP colchetes_direita
  109       | parenteses_esquerda EXP


Terminals, with rules where they appear

    eof (0) 0 1
    error (256)
    assign (258) 46 47 73
    assign_sum (259) 74
    assign_sub (260) 75
    assign_mult (261) 76
    assign_div (262) 77
    assign_set_union (263) 78
    assign_set_intersection (264) 79
    op_not (265) 89
    op_or (266) 87
    op_and (267) 88
    op_gt (268) 104
    op_lt (269) 105
    op_lte (270) 103
    op_gte (271) 102
    op_equal (272) 101
    op_diff (273) 100
    op_mod (274) 98
    parenteses_esquerda (275) 12 54 55 59 60 64 66 67 71 72 86 109
    parenteses_direita (276) 12 54 55 59 60 65 66 67 71 72 86
    op_mult (277) 96
    op_div (278) 97
    op_sum (279) 91 93
    op_sub (280) 90 92
    virgula (281) 14 45 57
    ponto (282) 53 107
    set_intersection (283) 94
    set_union (284) 95
    key_bool (285) 26
    key_caractere (286) 22
    key_set (287) 27
    key_vetor (288) 29
    key_continue (289) 70
    key_while (290) 67
    key_write (291) 72
    key_int (292) 24
    key_read (293) 71
    key_for (294) 64
    key_for_set (295) 66
    key_in (296) 66
    key_break (297) 69
    key_string (298) 23
    key_if (299) 59 60
    key_else (300) 60
    key_real (301) 25
    key_register (302) 7 28
    key_return (303) 68
    key_return_nothing (304) 17
    key_def (305) 3
    key_deftipo (306) 7
    booleano (307) 85
    inteiro (308) 81
    real (309) 82
    caractere (310) 83
    palavra (311) 84
    id (312) 7 18 28 44 45 46 47 51 53 55 66 71 80 107
    colchetes_esquerda (313) 29 52 108
    colchetes_direita (314) 29 52 108
    circunflexo (315) 99
    ponto_virgula (316) 42 46 47 48 55 65 68 69 70 71 72
    chaves_esquerda (317) 7 30 47 65
    chaves_direita (318) 7 30 47 65
    empty (319)
    TExpressao (320)
    TExp1 (321)
    TTLogico (322)
    TTLogico1 (323)
    TFLogico (324)
    TExpRel (325)
    TExpRel2 (326)
    TExpA (327)
    TExpA1 (328)
    TTermo (329)
    TTermo1 (330)
    TFator (331)
    TFator2 (332)
    TExpUnaria (333)
    TExpBase (334)
    TExpId (335)
    TInstrucoes (336)
    TInstrucoes2 (337)
    TInstrucao (338)
    TInstrucaoDeclaracaoInicializacao (339)
    TInstrucaoDeclaracaoInicializacao2 (340)
    TInstrucaoDeclaracaoInicializacao3 (341)
    TInstrucaoAtribuicaoCasting (342)
    TInstrucaoChamadaId (343)
    TChamadaFuncaoOuAtribuicao (344)
    TLvalueId (345)
    TOperadoresAtribuicao (346)
    TListaIdentificadores (347)
    TListaIdentificadores2 (348)
    TListaExpressoes (349)
    TListaExpressoes2 (350)
    TInstrucaoCondicional (351)
    TInstrucaoCondicional2 (352)
    TInstrucaoRepeticao (353)
    TLacoPara (354)
    TLacoParaConjunto (355)
    TLacoEnquanto (356)
    TInstrucaoSaida (357)
    TInstrucaoIO (358)
    TBloco (359)
    TDefinicaoFuncao (360)
    TListaParametrosFuncao (361)
    TListaParametrosFuncao2 (362)
    TTipoFuncao (363)
    TParametroFuncao (364)
    TTipo (365)
    TTipoPrimitivo (366)
    TTipoNumerico (367)
    TTipoEstruturado (368)
    TPrograma (369)
    TDef (370)
    TDefinicaoRegistro (371)
    TListaAtributos (372)
    TListaAtributos2 (373)


Nonterminals, with rules where they appear

    $accept (119)
        on left: 0
    PROGRAM (120)
        on left: 1 2
        on right: 0 1
    DEF (121)
        on left: 3 4 5 6
        on right: 1
    DEFINICAO_REGISTRO (122)
        on left: 7
        on right: 5
    LISTA_ATRIBUTOS (123)
        on left: 8 9 10 11
        on right: 7 10 11
    DEFINICAO_FUNCAO (124)
        on left: 12
        on right: 3 4
    LISTA_PARAMETROS_FUNCAO (125)
        on left: 13 14 15
        on right: 12 14
    TIPO_FUNCAO (126)
        on left: 16 17
        on right: 12
    PARAMETRO_FUNCAO (127)
        on left: 18
        on right: 13 14
    TIPO (128)
        on left: 19 20
        on right: 16 18 27 29 43 46 47
    TIPO_PRIMITIVO (129)
        on left: 21 22 23
        on right: 19 54
    TIPO_NUMERICO (130)
        on left: 24 25 26
        on right: 21
    TIPO_ESTRUTURADO (131)
        on left: 27 28 29
        on right: 20
    BLOCO (132)
        on left: 30
        on right: 12 41
    INSTRUCOES (133)
        on left: 31 32
        on right: 30 32
    INSTRUCAO (134)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 6 31 32 59 60 65 66 67
    INSTRUCAO_DECLARACAO (135)
        on left: 43
        on right: 8 10 33
    LISTA_IDENTIFICADORES (136)
        on left: 44 45
        on right: 43 45
    INSTRUCAO_INICIALIZACAO (137)
        on left: 46 47
        on right: 9 11 34 64
    INSTRUCAO_ATRIBUICAO (138)
        on left: 48
        on right: 35 65
    CLVALUE (139)
        on left: 49 50
        on right: 48
    LVALUE (140)
        on left: 51 52 53
        on right: 49 50 52 53
    CASTING (141)
        on left: 54
        on right: 49
    INSTRUCAO_CHAMADA_FUNCAO (142)
        on left: 55
        on right: 40
    LISTA_EXPRESSOES (143)
        on left: 56 57 58
        on right: 47 55 57
    INSTRUCAO_CONDICIONAL (144)
        on left: 59 60
        on right: 36
    INSTRUCAO_REPETICAO (145)
        on left: 61 62 63
        on right: 37
    LACO_PARA (146)
        on left: 64 65
        on right: 61
    LACO_PARA_CONJUNTO (147)
        on left: 66
        on right: 62
    LACO_ENQUANTO (148)
        on left: 67
        on right: 63
    INSTRUCAO_SAIDA (149)
        on left: 68 69 70
        on right: 39
    INSTRUCAO_IO (150)
        on left: 71 72
        on right: 38
    OPERADORES_ATRIBUICAO (151)
        on left: 73 74 75 76 77 78 79
        on right: 48
    EXP (152)
        on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 42 46 48 52 56 57 59 60 65 66 67 68 72 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 108 109
    EXP_ID (153)
        on left: 106 107 108 109
        on right: 80


State 0

    0 $accept: . PROGRAM eof

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 2
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    key_bool             shift, and go to state 5
    key_caractere        shift, and go to state 6
    key_set              shift, and go to state 7
    key_vetor            shift, and go to state 8
    key_continue         shift, and go to state 9
    key_while            shift, and go to state 10
    key_write            shift, and go to state 11
    key_int              shift, and go to state 12
    key_read             shift, and go to state 13
    key_for              shift, and go to state 14
    key_for_set          shift, and go to state 15
    key_break            shift, and go to state 16
    key_string           shift, and go to state 17
    key_if               shift, and go to state 18
    key_real             shift, and go to state 19
    key_register         shift, and go to state 20
    key_return           shift, and go to state 21
    key_return_nothing   shift, and go to state 22
    key_def              shift, and go to state 23
    key_deftipo          shift, and go to state 24
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 30
    chaves_esquerda      shift, and go to state 31

    $default  reduce using rule 2 (PROGRAM)

    PROGRAM                   go to state 32
    DEF                       go to state 33
    DEFINICAO_REGISTRO        go to state 34
    DEFINICAO_FUNCAO          go to state 35
    TIPO_FUNCAO               go to state 36
    TIPO                      go to state 37
    TIPO_PRIMITIVO            go to state 38
    TIPO_NUMERICO             go to state 39
    TIPO_ESTRUTURADO          go to state 40
    BLOCO                     go to state 41
    INSTRUCAO                 go to state 42
    INSTRUCAO_DECLARACAO      go to state 43
    INSTRUCAO_INICIALIZACAO   go to state 44
    INSTRUCAO_ATRIBUICAO      go to state 45
    CLVALUE                   go to state 46
    LVALUE                    go to state 47
    CASTING                   go to state 48
    INSTRUCAO_CHAMADA_FUNCAO  go to state 49
    INSTRUCAO_CONDICIONAL     go to state 50
    INSTRUCAO_REPETICAO       go to state 51
    LACO_PARA                 go to state 52
    LACO_PARA_CONJUNTO        go to state 53
    LACO_ENQUANTO             go to state 54
    INSTRUCAO_SAIDA           go to state 55
    INSTRUCAO_IO              go to state 56
    EXP                       go to state 57


State 1

   89 EXP: op_not . EXP

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 58
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 59

    EXP  go to state 60


State 2

   54 CASTING: parenteses_esquerda . TIPO_PRIMITIVO parenteses_direita
   86 EXP: parenteses_esquerda . EXP parenteses_direita

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 58
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    key_bool             shift, and go to state 5
    key_caractere        shift, and go to state 6
    key_int              shift, and go to state 12
    key_string           shift, and go to state 17
    key_real             shift, and go to state 19
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 59

    TIPO_PRIMITIVO  go to state 61
    TIPO_NUMERICO   go to state 39
    EXP             go to state 62


State 3

   91 EXP: op_sum . EXP

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 58
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 59

    EXP  go to state 63


State 4

   90 EXP: op_sub . EXP

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 58
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 59

    EXP  go to state 64


State 5

   26 TIPO_NUMERICO: key_bool .

    $default  reduce using rule 26 (TIPO_NUMERICO)


State 6

   22 TIPO_PRIMITIVO: key_caractere .

    $default  reduce using rule 22 (TIPO_PRIMITIVO)


State 7

   27 TIPO_ESTRUTURADO: key_set . TIPO

    key_bool       shift, and go to state 5
    key_caractere  shift, and go to state 6
    key_set        shift, and go to state 7
    key_vetor      shift, and go to state 8
    key_int        shift, and go to state 12
    key_string     shift, and go to state 17
    key_real       shift, and go to state 19
    key_register   shift, and go to state 20

    TIPO              go to state 65
    TIPO_PRIMITIVO    go to state 38
    TIPO_NUMERICO     go to state 39
    TIPO_ESTRUTURADO  go to state 40


State 8

   29 TIPO_ESTRUTURADO: key_vetor . TIPO colchetes_esquerda colchetes_direita

    key_bool       shift, and go to state 5
    key_caractere  shift, and go to state 6
    key_set        shift, and go to state 7
    key_vetor      shift, and go to state 8
    key_int        shift, and go to state 12
    key_string     shift, and go to state 17
    key_real       shift, and go to state 19
    key_register   shift, and go to state 20

    TIPO              go to state 66
    TIPO_PRIMITIVO    go to state 38
    TIPO_NUMERICO     go to state 39
    TIPO_ESTRUTURADO  go to state 40


State 9

   70 INSTRUCAO_SAIDA: key_continue . ponto_virgula

    ponto_virgula  shift, and go to state 67


State 10

   67 LACO_ENQUANTO: key_while . parenteses_esquerda EXP parenteses_direita INSTRUCAO

    parenteses_esquerda  shift, and go to state 68


State 11

   72 INSTRUCAO_IO: key_write . parenteses_esquerda EXP parenteses_direita ponto_virgula

    parenteses_esquerda  shift, and go to state 69


State 12

   24 TIPO_NUMERICO: key_int .

    $default  reduce using rule 24 (TIPO_NUMERICO)


State 13

   71 INSTRUCAO_IO: key_read . parenteses_esquerda id parenteses_direita ponto_virgula

    parenteses_esquerda  shift, and go to state 70


State 14

   64 LACO_PARA: key_for . parenteses_esquerda INSTRUCAO_INICIALIZACAO

    parenteses_esquerda  shift, and go to state 71


State 15

   66 LACO_PARA_CONJUNTO: key_for_set . parenteses_esquerda id key_in EXP parenteses_direita INSTRUCAO

    parenteses_esquerda  shift, and go to state 72


State 16

   69 INSTRUCAO_SAIDA: key_break . ponto_virgula

    ponto_virgula  shift, and go to state 73


State 17

   23 TIPO_PRIMITIVO: key_string .

    $default  reduce using rule 23 (TIPO_PRIMITIVO)


State 18

   59 INSTRUCAO_CONDICIONAL: key_if . parenteses_esquerda EXP parenteses_direita INSTRUCAO
   60                      | key_if . parenteses_esquerda EXP parenteses_direita INSTRUCAO key_else INSTRUCAO

    parenteses_esquerda  shift, and go to state 74


State 19

   25 TIPO_NUMERICO: key_real .

    $default  reduce using rule 25 (TIPO_NUMERICO)


State 20

   28 TIPO_ESTRUTURADO: key_register . id

    id  shift, and go to state 75


State 21

   68 INSTRUCAO_SAIDA: key_return . EXP ponto_virgula

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 58
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 59

    EXP  go to state 76


State 22

   17 TIPO_FUNCAO: key_return_nothing .

    $default  reduce using rule 17 (TIPO_FUNCAO)


State 23

    3 DEF: key_def . DEFINICAO_FUNCAO

    key_bool            shift, and go to state 5
    key_caractere       shift, and go to state 6
    key_set             shift, and go to state 7
    key_vetor           shift, and go to state 8
    key_int             shift, and go to state 12
    key_string          shift, and go to state 17
    key_real            shift, and go to state 19
    key_register        shift, and go to state 20
    key_return_nothing  shift, and go to state 22

    DEFINICAO_FUNCAO  go to state 77
    TIPO_FUNCAO       go to state 36
    TIPO              go to state 78
    TIPO_PRIMITIVO    go to state 38
    TIPO_NUMERICO     go to state 39
    TIPO_ESTRUTURADO  go to state 40


State 24

    7 DEFINICAO_REGISTRO: key_deftipo . key_register id chaves_esquerda LISTA_ATRIBUTOS chaves_direita

    key_register  shift, and go to state 79


State 25

   85 EXP: booleano .

    $default  reduce using rule 85 (EXP)


State 26

   81 EXP: inteiro .

    $default  reduce using rule 81 (EXP)


State 27

   82 EXP: real .

    $default  reduce using rule 82 (EXP)


State 28

   83 EXP: caractere .

    $default  reduce using rule 83 (EXP)


State 29

   84 EXP: palavra .

    $default  reduce using rule 84 (EXP)


State 30

   51 LVALUE: id .
   55 INSTRUCAO_CHAMADA_FUNCAO: id . parenteses_esquerda LISTA_EXPRESSOES parenteses_direita ponto_virgula
   80 EXP: id . EXP_ID

    parenteses_esquerda  shift, and go to state 80
    ponto                shift, and go to state 81
    colchetes_esquerda   shift, and go to state 82

    assign                   reduce using rule 51 (LVALUE)
    assign_sum               reduce using rule 51 (LVALUE)
    assign_sub               reduce using rule 51 (LVALUE)
    assign_mult              reduce using rule 51 (LVALUE)
    assign_div               reduce using rule 51 (LVALUE)
    assign_set_union         reduce using rule 51 (LVALUE)
    assign_set_intersection  reduce using rule 51 (LVALUE)
    ponto                    [reduce using rule 51 (LVALUE)]
    colchetes_esquerda       [reduce using rule 51 (LVALUE)]
    $default                 reduce using rule 106 (EXP_ID)

    EXP_ID  go to state 83


State 31

   30 BLOCO: chaves_esquerda . INSTRUCOES chaves_direita

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 2
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    key_bool             shift, and go to state 5
    key_caractere        shift, and go to state 6
    key_set              shift, and go to state 7
    key_vetor            shift, and go to state 8
    key_continue         shift, and go to state 9
    key_while            shift, and go to state 10
    key_write            shift, and go to state 11
    key_int              shift, and go to state 12
    key_read             shift, and go to state 13
    key_for              shift, and go to state 14
    key_for_set          shift, and go to state 15
    key_break            shift, and go to state 16
    key_string           shift, and go to state 17
    key_if               shift, and go to state 18
    key_real             shift, and go to state 19
    key_register         shift, and go to state 20
    key_return           shift, and go to state 21
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 30
    chaves_esquerda      shift, and go to state 31

    TIPO                      go to state 84
    TIPO_PRIMITIVO            go to state 38
    TIPO_NUMERICO             go to state 39
    TIPO_ESTRUTURADO          go to state 40
    BLOCO                     go to state 41
    INSTRUCOES                go to state 85
    INSTRUCAO                 go to state 86
    INSTRUCAO_DECLARACAO      go to state 43
    INSTRUCAO_INICIALIZACAO   go to state 44
    INSTRUCAO_ATRIBUICAO      go to state 45
    CLVALUE                   go to state 46
    LVALUE                    go to state 47
    CASTING                   go to state 48
    INSTRUCAO_CHAMADA_FUNCAO  go to state 49
    INSTRUCAO_CONDICIONAL     go to state 50
    INSTRUCAO_REPETICAO       go to state 51
    LACO_PARA                 go to state 52
    LACO_PARA_CONJUNTO        go to state 53
    LACO_ENQUANTO             go to state 54
    INSTRUCAO_SAIDA           go to state 55
    INSTRUCAO_IO              go to state 56
    EXP                       go to state 57


State 32

    0 $accept: PROGRAM . eof

    eof  shift, and go to state 87


State 33

    1 PROGRAM: DEF . PROGRAM eof

    op_not               shift, and go to state 1
    parenteses_esquerda  shift, and go to state 2
    op_sum               shift, and go to state 3
    op_sub               shift, and go to state 4
    key_bool             shift, and go to state 5
    key_caractere        shift, and go to state 6
    key_set              shift, and go to state 7
    key_vetor            shift, and go to state 8
    key_continue         shift, and go to state 9
    key_while            shift, and go to state 10
    key_write            shift, and go to state 11
    key_int              shift, and go to state 12
    key_read             shift, and go to state 13
    key_for              shift, and go to state 14
    key_for_set          shift, and go to state 15
    key_break            shift, and go to state 16
    key_string           shift, and go to state 17
    key_if               shift, and go to state 18
    key_real             shift, and go to state 19
    key_register         shift, and go to state 20
    key_return           shift, and go to state 21
    key_return_nothing   shift, and go to state 22
    key_def              shift, and go to state 23
    key_deftipo          shift, and go to state 24
    booleano             shift, and go to state 25
    inteiro              shift, and go to state 26
    real                 shift, and go to state 27
    caractere            shift, and go to state 28
    palavra              shift, and go to state 29
    id                   shift, and go to state 30
    chaves_esquerda      shift, and go to state 31

    $default  reduce using rule 2 (PROGRAM)

    PROGRAM                   go to state 88
    DEF                       go to state 33
    DEFINICAO_REGISTRO        go to state 34
    DEFINICAO_FUNCAO          go to state 35
    TIPO_FUNCAO               go to state 36
    TIPO                      go to state 37
    TIPO_PRIMITIVO            go to state 38
    TIPO_NUMERICO             go to state 39
    TIPO_ESTRUTURADO          go to state 40
    BLOCO                     go to state 41
    INSTRUCAO                 go to state 42
    INSTRUCAO_DECLARACAO      go to state 43
    INSTRUCAO_INICIALIZACAO   go to state 44
    INSTRUCAO_ATRIBUICAO      go to state 45
    CLVALUE                   go to state 46
    LVALUE                    go to state 47
    CASTING                   go to state 48
    INSTRUCAO_CHAMADA_FUNCAO  go to state 49
    INSTRUCAO_CONDICIONAL     go to state 50
    INSTRUCAO_REPETICAO       go to state 51
    LACO_PARA                 go to state 52
    LACO_PARA_CONJUNTO        go to state 53
    LACO_ENQUANTO             go to state 54
    INSTRUCAO_SAIDA           go to state 55
    INSTRUCAO_IO              go to state 56
    EXP                       go to state 57


State 34

    5 DEF: DEFINICAO_REGISTRO .

    $default  reduce using rule 5 (DEF)


State 35

    4 DEF: DEFINICAO_FUNCAO .

    $default  reduce using rule 4 (DEF)


State 36

   12 DEFINICAO_FUNCAO: TIPO_FUNCAO . parenteses_esquerda LISTA_PARAMETROS_FUNCAO parenteses_direita BLOCO

    parenteses_esquerda  shift, and go to state 89


State 37

   16 TIPO_FUNCAO: TIPO .
   43 INSTRUCAO_DECLARACAO: TIPO . LISTA_IDENTIFICADORES
   46 INSTRUCAO_INICIALIZACAO: TIPO . id assign EXP ponto_virgula
   47                        | TIPO . id assign chaves_esquerda LISTA_EXPRESSOES chaves_direita ponto_virgula

    id  shift, and go to state 90

    $default  reduce using rule 16 (TIPO_FUNCAO)

    LISTA_IDENTIFICADORES  go to state 91


State 38

   19 TIPO: TIPO_PRIMITIVO .

    $default  reduce using rule 19 (TIPO)


State 39

   21 TIPO_PRIMITIVO: TIPO_NUMERICO .

    $default  reduce using rule 21 (TIPO_PRIMITIVO)


State 40

   20 TIPO: TIPO_ESTRUTURADO .

    $default  reduce using rule 20 (TIPO)


State 41

   41 INSTRUCAO: BLOCO .

    $default  reduce using rule 41 (INSTRUCAO)


State 42

    6 DEF: INSTRUCAO .

    $default  reduce using rule 6 (DEF)


State 43

   33 INSTRUCAO: INSTRUCAO_DECLARACAO .

    $default  reduce using rule 33 (INSTRUCAO)


State 44

   34 INSTRUCAO: INSTRUCAO_INICIALIZACAO .

    $default  reduce using rule 34 (INSTRUCAO)


State 45

   35 INSTRUCAO: INSTRUCAO_ATRIBUICAO .
   65 LACO_PARA: INSTRUCAO_ATRIBUICAO . ponto_virgula EXP ponto_virgula INSTRUCAO_ATRIBUICAO parenteses_direita chaves_esquerda INSTRUCAO chaves_direita

    ponto_virgula  shift, and go to state 92

    $default  reduce using rule 35 (INSTRUCAO)


State 46

   48 INSTRUCAO_ATRIBUICAO: CLVALUE . OPERADORES_ATRIBUICAO EXP ponto_virgula

    assign                   shift, and go to state 93
    assign_sum               shift, and go to state 94
    assign_sub               shift, and go to state 95
    assign_mult              shift, and go to state 96
    assign_div               shift, and go to state 97
    assign_set_union         shift, and go to state 98
    assign_set_intersection  shift, and go to state 99

    OPERADORES_ATRIBUICAO  go to state 100


State 47

   50 CLVALUE: LVALUE .
   52 LVALUE: LVALUE . colchetes_esquerda EXP colchetes_direita
   53       | LVALUE . ponto id

    ponto               shift, and go to state 101
    colchetes_esquerda  shift, and go to state 102

    $default  reduce using rule 50 (CLVALUE)


State 48

   49 CLVALUE: CASTING . LVALUE

    id  shift, and go to state 103

    LVALUE  go to state 104


State 49

   40 INSTRUCAO: INSTRUCAO_CHAMADA_FUNCAO .

    $default  reduce using rule 40 (INSTRUCAO)


State 50

   36 INSTRUCAO: INSTRUCAO_CONDICIONAL .

    $default  reduce using rule 36 (INSTRUCAO)


State 51

   37 INSTRUCAO: INSTRUCAO_REPETICAO .

    $default  reduce using rule 37 (INSTRUCAO)


State 52

   61 INSTRUCAO_REPETICAO: LACO_PARA .

    $default  reduce using rule 61 (INSTRUCAO_REPETICAO)


State 53

   62 INSTRUCAO_REPETICAO: LACO_PARA_CONJUNTO .

    $default  reduce using rule 62 (INSTRUCAO_REPETICAO)


State 54

   63 INSTRUCAO_REPETICAO: LACO_ENQUANTO .

    $default  reduce using rule 63 (INSTRUCAO_REPETICAO)


State 55

   39 INSTRUCAO: INSTRUCAO_SAIDA .

    $default  reduce using rule 39 (INSTRUCAO)


State 56

   38 INSTRUCAO: INSTRUCAO_IO .

    $default  reduce using rule 38 (INSTRUCAO)


State 57

   42 INSTRUCAO: EXP . ponto_virgula
   87 EXP: EXP . op_or EXP
   88    | EXP . op_and EXP
   92    | EXP . op_sub EXP
   93    | EXP . op_sum EXP
   94    | EXP . set_intersection EXP
   95    | EXP . set_union EXP
   96    | EXP . op_mult EXP
   97    | EXP . op_div EXP
   98    | EXP . op_mod EXP
   99    | EXP . circunflexo EXP
  100    | EXP . op_diff EXP
  101    | EXP . op_equal EXP
  102    | EXP . op_gte EXP
  103    | EXP . op_lte EXP
  104    | EXP . op_gt EXP
  105    | EXP . op_lt EXP

    op_or             shift, and go to state 105
    op_and            shift, and go to state 106
    op_gt             shift, and go to state 107
    op_lt             shift, and go to state 108
    op_lte            shift, and go to state 109
    op_gte            shift, and go to state 110
    op_equal          shift, and go to state 111
    op_diff           shift, and go to state 112
    op_mod            shift, and go to state 113
    op_mult           shift, and go to state 114
    op_div            shift, and go to state 115
    op_sum            shift, and go to state 116
    op_sub            shift, and go to state 117
    set_intersection  shift, and go to state 118
    set_union         shift, and go to state 119
    circunflexo       shift, and go to state 120
    ponto_virgula     shift, and go to state 121


State 58

   86 EXP: parenteses_esquerda . EXP parenteses_direita
